update-0923-16:27 complete test all

--- a/index.html
+++ b/index.html
@@ -17,16 +17,58 @@
 
 <body>
   <!--[if lte IE 9]>
-    <p>您的浏览器版本过低，建议您升级浏览器。</p>
     <style type="text/css">
-      header,footer,div {
+     header, .fullpage-ad, footer, .erweima, .stick {
       display: none;
-      }
-
-      body {
-        background-color: #000919;
-      }
+     }
+     .jr-update {
+     width: 100%;
+     height: 60px;
+     border-bottom: 1px solid #112855;
+     line-height: 60px;
+     text-align: center;
+     font-size: 16px;
+     color: #fff;
+     }
+     .jr-info {
+     width: 100%;
+     }
+     .jr-logo {
+     width: 500px;
+     margin: 50px auto 0;
+     text-align: center;
+     }
+     .jr-info1 {
+     width: 100%;
+     margin-top: 30px;
+     
+     text-align: center;
+     font-size: 14px;
+     color: #fff;
+     }
+     .jr-info2 {
+     width: 100%;
+     margin-top: 80px;
+     text-align: center;
+     font-size: 18px;
+     color: #fff;
+     }
+     .jr-info3 {
+     width: 100%;
+     margin-top: 70px;
+     text-align: center;
+     color: #0f2143;
+     }
     </style>
+    <p class="jr-update">您的浏览器版本过低，为了能更好的浏览网页，建议您升级浏览器。</p>
+    <div class="jr-info">
+      <div class="jr-logo">
+        <img src="img/jianrong_logo.png" width="50%" alt="蓝派别墅轰趴馆">
+      </div>
+      <p class="jr-info1">【蓝派】是沪上唯一 一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。<br>【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。<br>【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
+      <p class="jr-info2">3092296410@qq.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18117409991&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海市南京西路1486号</p>
+      <p class="jr-info3">Copyright &nbsp;2016&nbsp; 沪ICP备16021382号-1</p>
+    </div>
   <![endif]-->
 
   <!--全屏轮播-->
