update-0926-11:55 complete test all

--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
   <title>【蓝派】--后台管理</title>
+  <link rel="shortcut icon" href="favicon.ico" />
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <!--<link href="../admin/css/admin-style.css" rel="stylesheet">-->
