--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -9,8 +9,8 @@
   <title>【蓝派】--后台管理</title>
   <script type="text/javascript">
     var lpcname = GetCookie('account_lpc');
-    if (lpcname == undefined || lpcname !== 'lpcadmin') {
-      window.location.href = 'admin-login.html';
+    if (lpcname == undefined || lpcname !== '15026777791') {
+      window.location.href = 'index.html';
     }
     function GetCookie(name) {
       var arg = name + "=";
@@ -34,6 +34,7 @@
       return unescape(window.document.cookie.substring(offset, endstr));
     }
   </script>
+  <link rel="shortcut icon" href="favicon.ico" />
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <link href="../admin/css/admin-style.css" rel="stylesheet">
