--- a/photo.html
+++ b/photo.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
   <title>【蓝派】--别墅轰趴馆</title>
+  <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <!--[if lte IE 9]>
