--- a/admin/index.html
+++ b/admin/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
   <title>【蓝派】--后台管理</title>
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon-1.ico" />
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
-  <!--<link href="../admin/css/admin-style.css" rel="stylesheet">-->
   <style type="text/css">
     body {
       padding-top: 40px;
