--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -34,7 +34,7 @@
       return unescape(window.document.cookie.substring(offset, endstr));
     }
   </script>
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon-1.ico" />
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <link href="../admin/css/admin-style.css" rel="stylesheet">
