update-1009-14:00  test all

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <a href="place.html">所有场地</a>
         <a href="food.html">餐饮</a>
         <a href="photo.html">照片墙</a>
-        <span>400-8008-8008</span>
+        <span>181-1740-9991</span>
       </nav>
       <!--响应式菜单-->
       <div class="responsiveNav" id="responsiveNav">
@@ -42,7 +42,7 @@
           <li><a href="food.html">餐饮</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html" class="active">关于我们</a></li>
-          <li>400-8008-8008</li>
+          <li>181-1740-9991</li>
           <li><img src="img/wechat.jpg" alt="客服二维码"></li>
           <li>微信客服：lanpaish</li>
         </ul>
@@ -108,18 +108,23 @@
     <!--伙伴-->
     <a name="friends">
       <section class="friends">
-        <h2>Our Friends.</h2>
+        <h2>Our Partners</h2>
         <ul class="clearfix flyLeftAnimate">
-          <li><img src="img/friends/1.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/2.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/3.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/4.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/5.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/10.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/9.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/8.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/7.jpg" alt="Our Friends"></li>
-          <li><img src="img/friends/6.jpg" alt="Our Friends"></li>
+          <li><img src="img/friends/14.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/2.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/3.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/4.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/5.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/10.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/9.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/8.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/7.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/6.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/13.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/11.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/12.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/1.jpg" alt="Our Partners"></li>
+          <li><img src="img/friends/15.jpg" alt="Our Partners"></li>
         </ul>
       </section>
     </a>
@@ -143,7 +148,7 @@
 
   <!--回到顶部-->
   <ul class="stick">
-    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
+    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>预定</li>
     <li class="backtop"><a href="#top">TOP</a></li>
   </ul>
   <div class="erweima">
