--- a/photo.html
+++ b/photo.html
@@ -41,7 +41,7 @@
       <a href="place.html">所有场地</a>
       <a href="food.html">餐饮</a>
       <a href="photo.html" class="active">照片墙</a>
-      <span>400-8008-8008</span>
+      <span>181-1740-9991</span>
     </nav>
     <!--响应式菜单-->
     <div class="responsiveNav" id="responsiveNav">
@@ -56,7 +56,7 @@
         <li><a href="food.html">餐饮</a></li>
         <li><a href="photo.html" class="active">照片墙</a></li>
         <li><a href="about.html">关于我们</a></li>
-        <li>400-8008-8008</li>
+        <li>181-1740-9991</li>
         <li><img src="img/wechat.jpg" alt="客服二维码"></li>
         <li>微信客服：lanpaish</li>
       </ul>
@@ -75,7 +75,7 @@
   </footer>
   <!--回到顶部-->
   <ul class="stick">
-    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
+    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>预定</li>
   </ul>
   <div class="erweima">
     <img src="img/wechat.jpg" alt="123">
