--- a/place.html
+++ b/place.html
@@ -27,7 +27,7 @@
         <a href="place.html" class="active">所有场地</a>
         <a href="food.html">餐饮</a>
         <a href="photo.html">照片墙</a>
-        <span>400-8008-8008</span>
+        <span>181-1740-9991</span>
       </nav>
       <!--响应式菜单-->
       <div class="responsiveNav" id="responsiveNav">
@@ -42,7 +42,7 @@
           <li><a href="food.html">餐饮</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html">关于我们</a></li>
-          <li>400-8008-8008</li>
+          <li>181-1740-9991</li>
           <li><img src="img/wechat.jpg" alt="客服二维码"></li>
           <li>微信客服：lanpaish</li>
         </ul>
@@ -50,7 +50,7 @@
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
-      <p class="slogan-nr">别墅轰趴馆</p>
+      <p class="slogan-nr">顶级别墅会所</p>
       <div class="strip"></div>
     </aside>
     <article class="daily" id="placeDaily">
@@ -104,7 +104,7 @@
 
   <!--回到顶部-->
   <ul class="stick">
-    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
+    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>预定</li>
     <li class="backtop"><a href="#top">TOP</a></li>
   </ul>
   <div class="erweima">
