update-1010-14:20 test all

--- a/photo.html
+++ b/photo.html
@@ -38,8 +38,8 @@
     <!--默认菜单-->
     <nav class="defaultView">
       <a href="index.html">首页</a>
-      <a href="place.html">所有场地</a>
-      <a href="food.html">餐饮</a>
+      <a href="place.html">推荐场地</a>
+      <a href="food.html">餐饮服务</a>
       <a href="photo.html" class="active">照片墙</a>
       <span>181-1740-9991</span>
     </nav>
@@ -52,8 +52,8 @@
     <div class="responsiveNav-list">
       <ul>
         <li><a href="index.html">首页</a></li>
-        <li><a href="place.html">所有场地</a></li>
-        <li><a href="food.html">餐饮</a></li>
+        <li><a href="place.html">推荐场地</a></li>
+        <li><a href="food.html">餐饮服务</a></li>
         <li><a href="photo.html" class="active">照片墙</a></li>
         <li><a href="about.html">关于我们</a></li>
         <li>181-1740-9991</li>
