--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <!--默认菜单-->
     <nav class="defaultView">
       <a href="index.html" class="active">首页</a>
-      <a href="place.html">所有场地</a>
-      <a href="food.html">餐饮</a>
+      <a href="place.html">推荐场地</a>
+      <a href="food.html">餐饮服务</a>
       <a href="photo.html">照片墙</a>
       <span>181-1740-9991</span>
     </nav>
@@ -119,8 +119,8 @@
     <div class="responsiveNav-list">
       <ul>
         <li><a href="index.html" class="active">首页</a></li>
-        <li><a href="place.html">所有场地</a></li>
-        <li><a href="food.html">餐饮</a></li>
+        <li><a href="place.html">推荐场地</a></li>
+        <li><a href="food.html">餐饮服务</a></li>
         <li><a href="photo.html">照片墙</a></li>
         <li><a href="about.html">关于我们</a></li>
         <li>181-1740-9991</li>
