--- a/place.html
+++ b/place.html
@@ -24,8 +24,8 @@
       <!--默认菜单-->
       <nav class="defaultView">
         <a href="index.html">首页</a>
-        <a href="place.html" class="active">所有场地</a>
-        <a href="food.html">餐饮</a>
+        <a href="place.html" class="active">推荐场地</a>
+        <a href="food.html">餐饮服务</a>
         <a href="photo.html">照片墙</a>
         <span>181-1740-9991</span>
       </nav>
@@ -38,8 +38,8 @@
       <div class="responsiveNav-list">
         <ul>
           <li><a href="index.html">首页</a></li>
-          <li><a href="place.html" class="active">所有场地</a></li>
-          <li><a href="food.html">餐饮</a></li>
+          <li><a href="place.html" class="active">推荐场地</a></li>
+          <li><a href="food.html">餐饮服务</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html">关于我们</a></li>
           <li>181-1740-9991</li>
@@ -114,7 +114,10 @@
   <!--品项弹出详情-->
   <div class="detailCover">
     <section class="detailContent">
-      <div class="comWidth" id="itemDetail">
+      <div class="detailBackTop">TOP</div>
+      <div class="comWidth" id="itemDetail"></div>
+      <div class="comWidth">
+        <div class="backList">返回</div>
       </div>
     </section>
   </div>
