--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
       <!--默认菜单-->
       <nav class="defaultView">
         <a href="index.html">首页</a>
-        <a href="place.html">推荐场地</a>
-        <a href="food.html">餐饮服务</a>
+        <a href="place.html">高端别墅</a>
+        <a href="food.html">餐饮定制</a>
         <a href="photo.html">照片墙</a>
         <span>181-1740-9991</span>
       </nav>
@@ -38,8 +38,8 @@
       <div class="responsiveNav-list">
         <ul>
           <li><a href="index.html">首页</a></li>
-          <li><a href="place.html">推荐场地</a></li>
-          <li><a href="food.html">餐饮服务</a></li>
+          <li><a href="place.html">高端别墅</a></li>
+          <li><a href="food.html">餐饮定制</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html" class="active">关于我们</a></li>
           <li>181-1740-9991</li>
