--- a/food.html
+++ b/food.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="renderer" content="webkit">
-  <title>【蓝派】--别墅轰趴馆</title>
+  <title>【蓝派】</title>
   <link rel="shortcut icon" href="favicon-1.ico" />
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/place.css">
