更新 字段修改

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
             <div class="aboutus-info-text">
               <h3>关于我们</h3>
               <div class="line"></div>
-              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
+              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。蓝派是欧润集团旗下的高端会所品牌，蓝派团队由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
               <p class="s2"><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
             </div>
           </article>
