--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>【蓝派】</title>
+  <title>【蓝派】--高端别墅会所</title>
   <link rel="shortcut icon" href="favicon-1.ico" />
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/place.css">
@@ -73,7 +73,7 @@
             <div class="aboutus-info-text">
               <h3>关于我们</h3>
               <div class="line"></div>
-              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。蓝派是欧润（上海）投资有限公司旗下的高端会所品牌，蓝派团队由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
+              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。蓝派团队由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
               <p class="s2"><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
             </div>
           </article>
