update add new page

--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -90,6 +90,7 @@
             <select class="form-control" id="lanClass">
               <option value="1">场地</option>
               <option value="2">餐饮</option>
+              <option value="3">增值服务</option>
             </select>
             <label for="" class="ml20">分类2:</label>
             <select class="form-control" id="styleLists">
@@ -123,6 +124,7 @@
             <select class="form-control" id="lanClass1">
               <option value="1">场馆</option>
               <option value="2">餐饮</option>
+              <option value="3">增值服务</option>
             </select>
             <label for="" class="ml20">分类2:</label>
             <select class="form-control" id="styleLists1" name="class">
