--- a/food.html
+++ b/food.html
@@ -26,6 +26,7 @@
         <a href="index.html">首页</a>
         <a href="place.html">高端别墅</a>
         <a href="food.html" class="active">餐饮定制</a>
+        <a href="service.html">增值服务</a>
         <a href="photo.html">照片墙</a>
         <span>181-1740-9991</span>
       </nav>
@@ -40,17 +41,18 @@
           <li><a href="index.html">首页</a></li>
           <li><a href="place.html">高端别墅</a></li>
           <li><a href="food.html" class="active">餐饮定制</a></li>
+          <li><a href="service.html">增值服务</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html">关于我们</a></li>
-          <li>181-1740-9991</li>
-          <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+          <li><a href="tel:18117409991">181-1740-9991</a></li>
           <li>微信客服：lanpaish</li>
+          <li><img src="img/wechat.jpg" alt="客服二维码"></li>
         </ul>
       </div>
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
-      <p class="slogan-nr">顶级别墅会所</p>
+      <p class="slogan-nr">最精品的美食</p>
       <div class="strip"></div>
     </aside>
     <article class="daily" id="foodDaily">
@@ -76,7 +78,6 @@
   <!--主要内容-->
   <div class="container" id="foodList">
     <!--分类-->
-
     <!--<div class="seeMore">查看更多</div>-->
   </div>
   <!--页尾-->
@@ -95,7 +96,6 @@
       </div>
     </div>
   </footer>
-
   <!--回到顶部-->
   <ul class="stick">
     <li class="wechat" name="扫码关注我们">扫码</br>关注</br>预定</li>
@@ -104,7 +104,6 @@
   <div class="erweima">
     <img src="img/wechat.jpg" alt="123">
   </div>
-
   <!--弹出详情-->
   <div class="detailCover">
     <section class="detailContent">
@@ -115,10 +114,8 @@
       </div>
     </section>
   </div>
-
   <script src="js/jquery-2.0.0.min.js"></script>
   <script src="js/place.js"></script>
-
 </body>
 
 </html>
