--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       <a href="index.html" class="active">首页</a>
       <a href="place.html">高端别墅</a>
       <a href="food.html">餐饮定制</a>
+      <a href="service.html">增值服务</a>
       <a href="photo.html">照片墙</a>
       <span>181-1740-9991</span>
     </nav>
@@ -123,11 +124,12 @@
         <li><a href="index.html" class="active">首页</a></li>
         <li><a href="place.html">高端别墅</a></li>
         <li><a href="food.html">餐饮定制</a></li>
+        <li><a href="service.html">增值服务</a></li>
         <li><a href="photo.html">照片墙</a></li>
         <li><a href="about.html">关于我们</a></li>
-        <li>181-1740-9991</li>
-        <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+        <li><a href="tel:18117409991">181-1740-9991</a></li>
         <li>微信客服：lanpaish</li>
+        <li><img src="img/wechat.jpg" alt="客服二维码"></li>
       </ul>
     </div>
   </header>
