--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
   <!--全屏轮播-->
   <div class="fullpage-ad">
     <ul class="slide-ad" id="slideAd">
@@ -31,7 +30,6 @@
     </div>
     <input type="button" value="更多精彩瞬间" class="changeList seeMore" id="changePhoto">
   </div>
-
   <!--头部-->
   <header>
     <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
@@ -40,6 +38,7 @@
       <a href="index.html">首页</a>
       <a href="place.html">高端别墅</a>
       <a href="food.html">餐饮定制</a>
+      <a href="service.html">增值服务</a>
       <a href="photo.html" class="active">照片墙</a>
       <span>181-1740-9991</span>
     </nav>
@@ -54,11 +53,12 @@
         <li><a href="index.html">首页</a></li>
         <li><a href="place.html">高端别墅</a></li>
         <li><a href="food.html">餐饮定制</a></li>
+        <li><a href="service.html">增值服务</a></li>
         <li><a href="photo.html" class="active">照片墙</a></li>
         <li><a href="about.html">关于我们</a></li>
-        <li>181-1740-9991</li>
-        <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+        <li><a href="tel:18117409991">181-1740-9991</a></li>
         <li>微信客服：lanpaish</li>
+        <li><img src="img/wechat.jpg" alt="客服二维码"></li>
       </ul>
     </div>
   </header>
@@ -82,9 +82,7 @@
   </div>
   <!--弹出层-->
   <div class="detailCover">
-
   </div>
-
   <!--JS文件-->
   <script src="js/jquery-2.0.0.min.js"></script>
   <script src="js/index.js"></script>
