--- a/service.html
+++ b/service.html
@@ -24,9 +24,9 @@
       <!--默认菜单-->
       <nav class="defaultView">
         <a href="index.html">首页</a>
-        <a href="place.html" class="active">高端别墅</a>
+        <a href="place.html">高端别墅</a>
         <a href="food.html">餐饮定制</a>
-        <a href="service.html">增值服务</a>
+        <a href="service.html" class="active">增值服务</a>
         <a href="photo.html">照片墙</a>
         <span>181-1740-9991</span>
       </nav>
@@ -39,9 +39,9 @@
       <div class="responsiveNav-list">
         <ul>
           <li><a href="index.html">首页</a></li>
-          <li><a href="place.html" class="active">高端别墅</a></li>
+          <li><a href="place.html">高端别墅</a></li>
           <li><a href="food.html">餐饮定制</a></li>
-          <li><a href="service.html">增值服务</a></li>
+          <li><a href="service.html" class="active">增值服务</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html">关于我们</a></li>
           <li><a href="tel:18117409991">181-1740-9991</a></li>
@@ -52,10 +52,10 @@
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
-      <p class="slogan-nr">顶级别墅会所</p>
+      <p class="slogan-nr">最专业的服务</p>
       <div class="strip"></div>
     </aside>
-    <article class="daily" id="placeDaily">
+    <article class="daily" id="serviceDaily">
       <div class="daily-left">
         <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
         <div class="dailyPic">
@@ -73,7 +73,7 @@
     <div class="scrolldown">滑动更多内容</div>
   </div>
   <!--主要内容-->
-  <div class="container" id="placeList">
+  <div class="container" id="serviceList">
     <!--分类-->
     <!--<div class="seeMore">查看更多</div>-->
   </div>
