--- a/about.html
+++ b/about.html
@@ -40,11 +40,12 @@
           <li><a href="index.html">首页</a></li>
           <li><a href="place.html">高端别墅</a></li>
           <li><a href="food.html">餐饮定制</a></li>
+          <li><a href="service.html">增值服务</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html" class="active">关于我们</a></li>
-          <li>181-1740-9991</li>
-          <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+          <li><a href="tel:18117409991">181-1740-9991</a></li>
           <li>微信客服：lanpaish</li>
+          <li><img src="img/wechat.jpg" alt="客服二维码"></li>
         </ul>
       </div>
     </header>
@@ -145,7 +146,6 @@
       </div>
     </div>
   </footer>
-
   <!--回到顶部-->
   <ul class="stick">
     <li class="wechat" name="扫码关注我们">扫码</br>关注</br>预定</li>
@@ -154,10 +154,8 @@
   <div class="erweima">
     <img src="img/wechat.jpg" alt="123">
   </div>
-
   <script src="js/jquery-2.0.0.min.js"></script>
   <script src="js/place.js"></script>
-
 </body>
 
 </html>
