--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
         <a href="index.html">首页</a>
         <a href="place.html">高端别墅</a>
         <a href="food.html">餐饮定制</a>
+        <a href="service.html">增值服务</a>
         <a href="photo.html">照片墙</a>
         <span>181-1740-9991</span>
       </nav>
