--- a/place.html
+++ b/place.html
@@ -52,7 +52,7 @@
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
-      <p class="slogan-nr">顶级别墅会所</p>
+      <p class="slogan-nr">最顶级的别墅</p>
       <div class="strip"></div>
     </aside>
     <article class="daily" id="placeDaily">
