--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <li><a href="photo.html">照片墙</a></li>
         <li><a href="about.html">关于我们</a></li>
         <li><a href="tel:18117409991">181-1740-9991</a></li>
-        <li>微信客服：lanpaish</li>
+        <li>微信客服：lanpartysh</li>
         <li><img src="img/wechat.jpg" alt="客服二维码"></li>
       </ul>
     </div>
