--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html" class="active">关于我们</a></li>
           <li><a href="tel:18117409991">181-1740-9991</a></li>
-          <li>微信客服：lanpaish</li>
+          <li>微信客服：lanpartysh</li>
           <li><img src="img/wechat.jpg" alt="客服二维码"></li>
         </ul>
       </div>
@@ -75,7 +75,7 @@
             <div class="aboutus-info-text">
               <h3>关于我们</h3>
               <div class="line"></div>
-              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。蓝派团队由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
+              <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。蓝派是欧润（上海）投资有限公司旗下高端会所品牌，蓝派团队由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
               <p class="s2"><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
             </div>
           </article>
