--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <link rel="shortcut icon" href="favicon-1.ico" />
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?f58d05b5ae9c810f007e21a426a112d6";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <!--[if lte IE 9]>
     <script src="js/html5shiv.min.js"></script>
     <script src="js/respond.min.js"></script>
@@ -73,7 +82,6 @@
       <p class="jr-info3">Copyright &nbsp;2016&nbsp; 沪ICP备16021382号-1</p>
     </div>
   <![endif]-->
-
   <!--全屏轮播-->
   <div class="fullpage-ad">
     <ul class="slide-ad" id="slideAd">
@@ -100,7 +108,6 @@
       <li></li>
     </ul>
   </div>
-
   <!--头部-->
   <header>
     <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
@@ -151,7 +158,6 @@
   <div class="erweima">
     <img src="img/wechat.jpg" alt="客服二维码">
   </div>
-
   <!--JS文件-->
   <script src="js/jquery-2.0.0.min.js"></script>
   <script src="js/index.js"></script>
